@@ -1,3 +1,8 @@
+2012-05-25         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* filefuncs.c (array_set_numeric): Don't return a value from
+	a void function.
+
 2012-05-24         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* Makefile.am (AM_CPPFLAGS): Use $(srcdir) to work properly when
