@@ -1,3 +1,8 @@
+2012-05-25         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (readfile): Don't copy the Makefile over readfile.ok
+	if there's a problem.
+
 2012-05-24         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* Makefile.am (fmtspcl, include2, incdupe, incdup2, incdupe3): Fix
